<resources>
    <string name="app_name">SofisTrending</string>
    <string name="btnIniciar">Iniciar</string>
    <string name="tvSofiasTrending">Sofia\'s Trending</string>
    <string name="btnSalir">Salir</string>
    <string name="title_activity_menu">Menu</string>
    <string name="vimini">Sofia\'s Trending</string>
    <string name="btn1">Niños</string>
    <string name="btn2">Dama</string>
    <string name="btn3">Caballero</string>
    <string name="txtDama">Sofia\'s Trending</string>
    <string name="t1">!!Damas!!</string>
    <string name="txtCaballero">Sofia\'s Trending</string>
    <string name="t2">!!Caballeros!!</string>
    <string name="txtNiño">Sofia\'s Trending</string>
    <string name="t3">!!Niños!!</string>
    <string name="btnn">Detalles</string>
    <string name="txtc">Vestido color Piel, Diseñador Italiano: Pablo Mandetty
        En tallas M, S, Xs, L Precio: $800.00
    </string>
    <string name="mm1">Detalles</string>
    <string name="txtw">Falda color gris, Seda, Diseñador Colombiano: Pablo Escobar
    Tallas x, m, s, l, Precio $400 Camisa color Blanco Tela Satin Precio $300</string>
    <string name="m1">Comprar</string>
    <string name="m2">Regresar</string>

</resources>
