<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_menu"
        tools:context=".Menu">

    <TextView
            android:text="@string/vimini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/vimini"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" tools:layout_editor_absoluteY="66dp"
            app:layout_constraintHorizontal_bias="0.503" android:textColor="@color/colorAccent"
            app:fontFamily="sans-serif" android:textSize="30sp"/>
    <Button
            android:text="@string/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/t1" android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/vimini" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.532"
            android:background="@color/colorAccent" android:textColor="@android:color/white" android:textSize="18sp"/>
    <Button
            android:text="@string/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn2" android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/t1" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.532"
            android:background="@color/colorAccent" android:textColor="@android:color/white" android:textSize="18sp"/>
    <Button
            android:text="@string/btn3"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:id="@+id/btn3" android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/btn2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.535"
            android:background="@color/colorAccent" android:textColor="@android:color/white" android:textSize="18sp"/>
</android.support.constraint.ConstraintLayout>