<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Detalles1">

    <TextView
            android:text="@string/txtCaballero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtCaballero3" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:fontFamily="sans-serif" android:textColor="@color/colorAccent"
            android:textSize="30sp"/>
    <ImageView
            android:src="@drawable/mg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView5" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/txtCaballero3" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.516"/>
    <TextView
            android:text="@string/txtw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtw" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:textColor="@android:color/black"
            app:fontFamily="sans-serif" android:textSize="18sp"/>
    <Button
            android:text="@string/m1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/m1" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtw" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="72dp" android:layout_marginStart="72dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:background="@color/colorAccent"
            android:textColor="@android:color/white"/>
    <Button
            android:text="@string/m2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/m2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtw" app:layout_constraintStart_toEndOf="@+id/m1"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:background="@color/colorAccent"
            android:textColor="@android:color/white"/>
</android.support.constraint.ConstraintLayout>