<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".menu1">

    <TextView
            android:text="@string/vimini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/vimini2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.503" android:textColor="@color/colorAccent"
            app:fontFamily="sans-serif" android:textSize="30sp" android:layout_marginTop="48dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/t1"
            android:layout_width="@android:dimen/thumbnail_height"
            android:layout_height="wrap_content"
            android:id="@+id/t1" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/vimini2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:textColor="@android:color/white"
            android:background="@color/colorAccent"/>
    <Button
            android:text="@string/t2"
            android:layout_width="@android:dimen/thumbnail_height"
            android:layout_height="wrap_content" android:id="@+id/t2"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/t1" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:textColor="@android:color/white"
            android:background="@color/colorAccent"/>
    <Button
            android:text="@string/t3"
            android:layout_width="@android:dimen/thumbnail_height"
            android:layout_height="wrap_content"
            android:id="@+id/t3" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/t2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:textColor="@android:color/white"
            android:background="@color/colorAccent"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/e1"
            android:id="@+id/imageView14" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/t3" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>