<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Dama">

    <TextView
            android:text="@string/txtDama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtdama"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:fontFamily="sans-serif" android:textSize="30sp"
            android:textColor="@color/colorAccent" app:layout_constraintHorizontal_bias="0.503"/>
    <TextView
            android:text="@string/t1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/t1" app:fontFamily="sans-serif"
            android:textSize="24sp" android:textColor="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@+id/txtdama" android:layout_marginEnd="140dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="140dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" app:layout_constraintHorizontal_bias="0.911"/>
    <ImageView
            android:layout_width="@android:dimen/thumbnail_height"
            android:layout_height="@android:dimen/thumbnail_height" app:srcCompat="@drawable/mg1"
            android:id="@+id/imageView" android:adjustViewBounds="false"
            android:cropToPadding="false" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/t1" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"/>
    <ImageView
            android:layout_width="@android:dimen/thumbnail_height"
            android:layout_height="@android:dimen/thumbnail_height" app:srcCompat="@drawable/mg2"
            android:id="@+id/imageView2" app:layout_constraintStart_toEndOf="@+id/imageView"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/t1"/>
    <ImageView
            android:layout_width="@android:dimen/thumbnail_height"
            android:layout_height="@android:dimen/thumbnail_height" app:srcCompat="@drawable/mg3"
            android:id="@+id/imageView3" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageView
            android:layout_width="@android:dimen/thumbnail_height"
            android:layout_height="@android:dimen/thumbnail_height" app:srcCompat="@drawable/mg4"
            android:id="@+id/imageView4" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" app:layout_constraintStart_toEndOf="@+id/imageView3"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/btnn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnn"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.178" tools:text="@string/btnn"
            android:background="@color/colorAccent"/>
    <Button
            android:text="@string/mm1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mm1" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toEndOf="@+id/btnn"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" app:layout_constraintHorizontal_bias="0.798"
            app:layout_constraintBottom_toTopOf="@+id/imageView4" app:layout_constraintVertical_bias="0.379"
            android:background="@color/colorAccent"/>
</android.support.constraint.ConstraintLayout>